[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://AreaOfEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://Hiet.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.17347
height = 5.48924

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("colored_transparent:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 409 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("colored_transparent/colored_transparent2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 224 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("colored_transparent/colored_transparent2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 315.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Wand Hitbox/CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Wand Hitbox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Wand Hitbox/CollisionShape2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Wand Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Smack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("colored_transparent:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 409 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("colored_transparent/colored_transparent2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 224 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("colored_transparent/colored_transparent2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 315.0, 315.0, 320.0, 330.0, 340.0, 350.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Wand Hitbox/CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 3.0, 15.0, 20.0, 30.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Wand Hitbox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Wand Hitbox/CollisionShape2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Wand Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.64903

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 0.332169, -0.166084 )
collision_layer = 16
script = ExtResource( 1 )

[node name="colored_transparent" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.210175, -0.27501 )

[node name="colored_transparent2" parent="colored_transparent" instance=ExtResource( 2 )]
position = Vector2( 7.30007, -1.17378 )
rotation = 6.28319
frame = 224

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.154972, 5.10006 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Smack = SubResource( 3 )

[node name="AnimationTimer1" type="Timer" parent="."]
wait_time = 0.5

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="AreaOfEffect" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="AreaOfEffect" index="0"]
shape = SubResource( 5 )

[node name="Wand Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="Wand Hitbox" index="0"]
position = Vector2( 9.58615, -2.39724 )
rotation = 0.523599
shape = SubResource( 6 )

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Spell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="AnimationTimer1" to="." method="_on_AnimationTimer1_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]

[editable path="AreaOfEffect"]

[editable path="Wand Hitbox"]
